--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -1,111 +1,109 @@
 Problem Type:
     Type: Welding
     Total Plates: 3
+    Length: 0.001
 Domains:
     Plate 1:
         Geometry:
             y0: 0
-            y1: 0.4
+            y1: 0.004
             x0: 0
-            x1: 1.0
+            x1: 0.1
         Material:
-            kx: 0.6
-            ky: 0.6
-            Density: 1500
-            Cp: 900
+            kx: 0.658
+            ky: 0.658
+            Density: 1600
+            Cp: 930
             Viscosity:
                 A: 0.0056
                 Ea: 74400
         Mesh:
-            Points in X: 10
-            Points in Y: 10
+            Points in X: 100
+            Points in Y: 4
         Boundary Condition:
-            External:
-                Left Edge: 
-                    Room Temperature: 270
-                    Convection Coefficient: 100
-                Right Edge:
-                    Room Temperature: 271
-                    Convection Coefficient: 101
-                Bottom Edge:
-                    Room Temperature: 272
-                    Convection Coefficient: 102
-            Internal:
-                Top Edge:
-                    Horizontal asperity ratio: 4
-                    Vertical asperity ratio: 4
+            Thermal:
+                Fixed Temperature:
+                    Bottom Edge:
+                        Temperature: 0
+                    Left Edge:
+                        Temperature: 0
+                    Right Edge:
+                        Temperature: 0
+            Mechanical:
+                Intimate Contact:
+                    Top Edge:
+                        Horizontal asperity ratio: 4
+                        Vertical asperity ratio: 4
         Initial Condition:
-            Temperature: 270
-    
+            Temperature: 293
     Plate 2:
         Geometry:
-            y0: 0.4
-            y1: 0.42
+            y0: 0.004
+            y1: 0.006
             x0: 0
-            x1: 1.0           
-        Material:
-            kx: 0.8
-            ky: 0.8
-            Density: 2000
-            Cp: 700        
+            x1: 0.1           
+        Material: 
+            kx: 27.1
+            ky: 27.1
+            Density: 7875
+            Cp: 515  
             Viscosity: 
                 A: 0.0056
                 Ea: 74400
         Mesh:
-            Points in X: 10
+            Points in X: 100
             Points in Y: 2
         Boundary Condition:  
-            External:
-                Left Edge: 
-                    Room Temperature: 300
-                    Convection Coefficient: 120
-                Right Edge:
-                    Room Temperature: 301
-                    Convection Coefficient: 121
-            Internal:
-                Top Edge:
-                    Horizontal asperity ratio: 2
-                    Vertical asperity ratio: 2
-                Bottom Edge:
-                    Horizontal asperity ratio: 2
-                    Vertical asperity ratio: 2
+            Thermal:
+                Fixed Temperature:
+                    Left Edge: 
+                        Temperature: 0
+                    Right Edge:
+                        Temperature: 0
+            Mechanical:
+                Intimate Contact:
+                    Top Edge:
+                        Horizontal asperity ratio: 2
+                        Vertical asperity ratio: 2
+                    Bottom Edge:
+                        Horizontal asperity ratio: 2
+                        Vertical asperity ratio: 2
         Initial Condition:
-            Temperature: 450
-            Input Power Density: 2
+            Temperature: 293
+            Power Generation: 200
     Plate 3:
         Geometry:
-            y0: 0.42
-            y1: 0.82
+            y0: 0.006
+            y1: 0.010
             x0: 0
-            x1: 1.0
+            x1: 0.1
         Material: 
-            kx: 0.7
-            ky: 0.7
+            kx: 0.658
+            ky: 0.658
             Density: 1600
-            Cp: 910
+            Cp: 930
             Viscosity:
                 A: 0.0056
                 Ea: 74400
         Mesh:
-            Points in X: 10
-            Points in Y: 10
+            Points in X: 100
+            Points in Y: 4
         Boundary Condition:
-            External:
-                Left Edge: 
-                    Room Temperature: 280
-                    Convection Coefficient: 110
-                Right Edge:
-                    Room Temperature: 281
-                    Convection Coefficient: 111
-                Top Edge:
-                    Room Temperature: 282
-                    Convection Coefficient: 112
-            Internal:
-                Bottom Edge:                    
-                    Horizontal asperity ratio: 1
-                    Vertical asperity ratio: 1
+            Thermal:
+                Fixed Temperature:
+                    Left Edge: 
+                        Temperature: 0
+                    Right Edge:
+                        Temperature: 0
+                    Top Edge:
+                        Temperature: 0
+            Mechanical:
+                Intimate Contact:
+                    Bottom Edge:                    
+                        Horizontal asperity ratio: 1
+                        Vertical asperity ratio: 1
         Initial Condition: 
-            Temperature: 280
+            Temperature: 293
 Simulation:
-    Step Time: 0.1
-    Number of Steps: 1000
+    Step Time: 0.0005
+    Number of Steps: 20000
