the code is matching with FEM codes. It is important to notice that results from Comsol are sligtly different from results of ABAQUS and, the current code is in the same range (better approxing to COMSOL). Some old files (in the problems module) which are not further used are identified as 'excluded'. Refactoring in masks was also done.

--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -10,8 +10,8 @@ Domains:
             x0: 0
             x1: 0.1
         Material: 
-            kx: 0.
-            ky: 1.
+            kx: 1
+            ky: 1
             Density: 1500
             Cp: 1000
             Viscosity:
@@ -43,8 +43,8 @@ Domains:
             x0: 0
             x1: 0.1           
         Material: 
-            kx: 0
-            ky: 30
+            kx: 50
+            ky: 27
             Density: 15000
             Cp: 1000
             Viscosity:
@@ -71,7 +71,7 @@ Domains:
         Initial Condition:
             Temperature: 700
             Power Input:
-                All: 1000 
+                Inner: 1000 
     Plate 3:
         Geometry:
             y0: 0.006
@@ -79,8 +79,8 @@ Domains:
             x0: 0
             x1: 0.1
         Material: 
-            kx: 0.
-            ky: 1.
+            kx: 1
+            ky: 1
             Density: 1500
             Cp: 1000
             Viscosity:
