name Plates was renamed to Part. Heat Transfer now has accuracy 4 finite difference, which makes solution closer to abaqus but further from comsol.

--- a/TwoPlates.yaml
+++ b/TwoPlates.yaml
@@ -1,9 +1,9 @@
 Problem Type:
     Type: Heat Transfer
     Total Plates: 3
-    Length: 0.001
+    Length: 0.1
 Domains:
-    Plate 1:
+    Part 1:
         Geometry:
             y0: 0
             y1: 0.004
@@ -12,7 +12,7 @@ Domains:
         Material Properties: 
             Density: 1600            
             Thermal:
-                kx: 0
+                kx: 0.658
                 ky: 0.658
                 Cp: 930
             Viscosity:
@@ -21,7 +21,7 @@ Domains:
                 Ea: 26300
         Mesh:
             Points in X: 101
-            Points in Y: 11
+            Points in Y: 22
         Boundary Condition:
             Thermal:
                 Fixed Boundary:
@@ -35,7 +35,7 @@ Domains:
             Temperature: 30
     Interface 1:
         Initial Condition:
-            Temperature: 700
+            Temperature: 1000
             Roughness:
                 Horizontal asperity ratio: 4
                 Vertical asperity ratio: 4
@@ -43,10 +43,10 @@ Domains:
             Thermal:
                 Fixed Boundary:
                     Left Edge:
-                        Temperature: 30
+                        Temperature: 25
                     Right Edge:
-                        Temperature: 30
-    Plate 2:
+                        Temperature: 25
+    Part 2:
         Geometry:
             y0: 0.004
             y1: 0.006
@@ -55,7 +55,7 @@ Domains:
         Material Properties:
             Density: 7875
             Thermal:
-                kx: 0
+                kx: 27.54
                 ky: 27.54
                 Cp: 515
             Viscosity:
@@ -64,7 +64,7 @@ Domains:
                 Ea: 26300
         Mesh:
             Points in X: 101
-            Points in Y: 6
+            Points in Y: 12
         Boundary Condition:  
             Thermal:
                 Fixed Boundary:
@@ -81,12 +81,12 @@ Domains:
                         Horizontal asperity ratio: 2
                         Vertical asperity ratio: 2
         Initial Condition:
-            Temperature: 700
+            Temperature: 1000
             Power Input:
-                All: 1000 
+                All: 0
     Interface 2:
         Initial Condition:
-            Temperature: 700
+            Temperature: 1000
             Roughness:
                 Horizontal asperity ratio: 4
                 Vertical asperity ratio: 4
@@ -94,10 +94,10 @@ Domains:
             Thermal:
                 Fixed Boundary:
                     Left Edge:
-                        Temperature: 30
+                        Temperature: 25
                     Right Edge:
-                        Temperature: 30
-    Plate 3:
+                        Temperature: 25
+    Part 3:
         Geometry:
             y0: 0.006
             y1: 0.010
@@ -106,7 +106,7 @@ Domains:
         Material Properties:
             Density: 1600           
             Thermal:
-                kx: 0
+                kx: 0.658
                 ky: 0.658
                 Cp: 930
             Viscosity:
@@ -115,7 +115,7 @@ Domains:
                 Ea: 26300
         Mesh:
             Points in X: 101
-            Points in Y: 11
+            Points in Y: 22
         Boundary Condition:
             Thermal:
                 Fixed Boundary:
@@ -133,8 +133,8 @@ Domains:
         Initial Condition: 
             Temperature: 30
 Simulation:
-    Step Time: 0.01
-    Number of Steps: 2000
+    Step Time: 0.0005
+    Number of Steps: 40000
 Plot:
     Temp Output Folder: "./output/Temperature/"
     Dic Output Folder: "./output/Dic/"
@@ -142,4 +142,4 @@ Plot:
     figure dic name: Dic
     Color Interpolation: 50
     Color Map: "inferno"
-    plot interval: 100
+    plot interval: 1000
